# Hosted-checkout-monitoring

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AUDIT_PII_DATA_FLOW.md  AUDIT_SECURITY_FINDINGS.md  Dockerfile  Gov_mapping.xlsx  Hosted_Checkout_Monitoring_BRD.docx  README.html  README.md  aml_web_system_outline_eebc2065.plan.md  docker-compose.yml  docker-entrypoint.sh  generate_brd.py  io_utils.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  run_setup.cmd  run_setup.ps1  run_setup_local.cmd  run_setup_rhel.sh  scenarios.json  scenarios.py  start_app.cmd  start_app.sh  wallet_enrichment.py
.cursor/rules/: project-context.mdc
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_transaction_external_id.py  003_scenario_monitored_banks.py  004_users_and_investigator_policy.py  005_w2_min_txn.py  006_scenario_enabled_switches.py  007_d1_d2_high_risk_thresholds.py  008_rolling_detection_scope.py  009_scenario_labels_override.py  010_investigation_consolidate_status.py  011_detection_queue_policy.py  012_wallet_reactivated_status.py  013_pending_evidence_sla.py  (+2 more)
app/: config.py  constants.py  database.py  jinja_filters.py  main.py  models.py  startup_checks.py  template_ctx.py  templating.py
sample_data/: README.md  synthetic_transactions_demo.xlsx
scripts/: generate_synthetic_import.py  validate_synthetic_import.py
tests/: conftest.py  test_detections_filters.py  test_pending_evidence_sla.py  test_rolling_dedupe.py  test_scenarios_service.py  test_security_smoke.py  test_transaction_enhancements.py
(+57 files in other folders)
