[project]
name = "card-cashin-monitoring"
version = "0"
description = "Card cash-in monitoring (desktop scenarios + AML web UI)"
readme = "README.md"
requires-python = ">=3.13,<3.14"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# This project is not distributed on PyPI; `packages = []` keeps `pip install .`
# from auto-discovering `app` and other trees as installable packages.
[tool.setuptools]
packages = []
